distribution/k8s-local/smackmap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: lovemap
  name: lovemap
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: lovemap
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/lovemap-network: "true"
        io.kompose.service: lovemap
    spec:
      containers:
        - env:
            - name: spring_profiles_active
              value: local
          image: docker.io/attilapalfi92/lovemap-backend:latest
          imagePullPolicy: Always
          name: lovemap
          ports:
            - containerPort: 8090
          resources: {}
      restartPolicy: Always
status: {}
