distribution/k8s-local/smackmap_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: lovemap-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/lovemap-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/lovemap-network: "true"
